--- a/ReadonlyMarker/ReadonlyMarker.csproj
+++ b/ReadonlyMarker/ReadonlyMarker.csproj
@@ -4,4 +4,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" />
+  </ItemGroup>
+
 </Project>
